--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -29,6 +29,8 @@
 }
 
 @*todo: can't just use fh-back-link, need to figure it out *@
+@*todo: we need a non-javascript version of fh-back-link*@
+@*todo: all versions of fh-back-link should exclude referrers from outside of the current site*@
 @section Back {
     <a class="govuk-back-link fh-back-link">Back</a>
 }
