select loc back wip

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -128,7 +128,7 @@
 
                 if (locationsCount == 0)
                 {
-                    redoLocationUrl = $"{redoLocationUrl}&redoStart={true}";
+                    redoLocationUrl = $"{redoLocationUrl}&back={ServiceJourneyPage.Service_Detail.GetSlug()}";
                 }
 
                 <summary-row key="Locations" show-empty
