enable save after removing a location in edit mode + calc back on service details page, instead of using referrer

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -28,11 +28,8 @@
     ViewData["Title"] = title;
 }
 
-@*todo: can't just use fh-back-link, need to figure it out *@
-@*todo: we need a non-javascript version of fh-back-link*@
-@*todo: all versions of fh-back-link should exclude referrers from outside of the current site*@
 @section Back {
-    <a class="govuk-back-link fh-back-link">Back</a>
+    <a href="@Model.BackUrl" class="govuk-back-link">Back</a>
 }
 
 <div class="govuk-grid-row">
