safer to add back for service-details at a lower level

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -20,7 +20,7 @@
         cta = "Confirm details";
     }
 
-    //todo: can we handle this with a new ChangeFlow value?
+    //todo: can we handle with using the back param? (or possibly the ChangeFlow value)
     string redo = ServiceJourneyPage.Service_Detail.GetSlug();
 
     int locationsCount = service.AllLocations.Count();
