show description when empty

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -56,7 +56,7 @@
                 }
             </summary-row>
 
-            <summary-row key="Description" class="fh-pre-wrap" action1="Change"
+            <summary-row key="Description" show-empty class="fh-pre-wrap" action1="Change"
                          action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Service_Description, ServiceJourneyChangeFlow.SinglePage)">@service.Description</summary-row>
 
             <summary-row key="Does support relate to children or young people?"
