--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/Find.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/Find.cshtml
@@ -30,7 +30,7 @@
             </tr>
             </thead>
             <tbody class="govuk-table__body">
-            @foreach (var total in Model.GetTotals())
+            @foreach (var total in Model.Totals)
             {
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">@total.Key.Name</th>
@@ -49,7 +49,7 @@
             </tr>
             </thead>
             <tbody class="govuk-table__body">
-            @foreach (var recent in Model.GetRecentSearches())
+            @foreach (var recent in Model.Breakdown)
             {
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">@Model.DateToWeekString(@recent.Key)</th>
@@ -58,7 +58,7 @@
             }
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Total number of searches in the last 4 weeks</th>
-                <td class="govuk-table__cell">@Model.GetRecentSearches().Sum(x => x.Value)</td>
+                <td class="govuk-table__cell">@Model.Breakdown.Sum(x => x.Value)</td>
             </tr>
             </tbody>
         </table>
