--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_AddServiceCard.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_AddServiceCard.cshtml
@@ -2,7 +2,7 @@
 
 <div class="card">
     <h3 class="govuk-heading-s">
-        <a href="/manage-services/start-add-service?servicetype={@Model}">Add a service</a>
+        <a href="/manage-services/start-add-service?servicetype=@Model">Add a service</a>
     </h3>
     <p class="govuk-body-s">Add a service to the directory.</p>
     <p class="govuk-body-s">Services can include groups, activities, programmes and advice.</p>
