--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/local-authority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/local-authority.cshtml
@@ -1,4 +1,44 @@
 ﻿@page
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.local_authorityModel
 @{
+    ViewData["Title"] = "Search and select the local authority area this service is in";
 }
+
+@section Back {
+    <a href="@Model.BackUrl" class="govuk-back-link">Back</a>
+}
+
+@* todo: have a component for this?*@
+
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                <h1 class="govuk-fieldset__heading">
+                    Search and select the local authority area this service is in
+                </h1>
+            </legend>
+            <form method="post" novalidate>
+        
+                @*todo: dynamically load data from db*@
+                @*todo: accessibility: label (visually hidden perhaps), aria (no localAuthority-hint), etc*@
+
+                <div class="govuk-form-group">
+                    <label class="govuk-label" for="localAuthority">
+                        <!---Select local authority--->
+                    </label>
+                    <select class="govuk-select" id="localAuthority" name="localAuthority" aria-describedby="localAuthority-hint">
+                        <option value="" selected disabled></option>
+                        <option value="Bristol City Council">Bristol City Council</option>
+                        <option value="Redbridge Council">Redbridge Council</option>
+                        <option value="Suffolk County Council">Suffolk County Council</option>
+                    </select>
+                </div>
+        
+                <button type="submit" class="govuk-button" data-module="govuk-button">
+                    Continue
+                </button>
+            </form>
+        </fieldset>
+    </div>
+</div>
