--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Index.cshtml
@@ -11,7 +11,8 @@
 <div class="govuk-grid-row govuk-!-margin-bottom-8">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">@Model.Title</h1>
-
+        
+        @*todo: when dfe admin, pass ServiceTypeArg - will need to change service list to show ls/vcs services first though, so we know which to pass*@
         <p>View existing services@(Model.OrganisationTypeContent) or <a href="/manage-services/start-add-service">add a service</a>.</p>
     </div>
 </div>
