--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -36,6 +36,11 @@
                     <partial name="_AddOrganisationCard" />
                     <partial name="_ManageOrganisationsCard" />
                 </div>
+
+                <partial name="_MenuSection" model="@("Performance data")" />
+                <div class="cards">
+                    <partial name="_PerformanceDataCard" model="true" />
+                </div>
                 break;
 
             case MenuPage.La:
@@ -65,6 +70,11 @@
                         </h3>
                         <p class="govuk-body-s">Find information stored about a person.</p>
                     </div>
+                </div>
+
+                <partial name="_MenuSection" model="@("Performance data")" />
+                <div class="cards">
+                    <partial name="_PerformanceDataCard" model="false" />
                 </div>
                 break;
 
