Add connect page, remove possibly incorrect service count

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/_Navigation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/_Navigation.cshtml
@@ -2,15 +2,15 @@
 
 <h2 class="govuk-heading-s">Services performance</h2>
 <ul class="govuk-list govuk-body-xs navigation-list">
-    <li>
+    <li @if (Model.ActivePage == ReportingNavigationDataModel.Page.Connect) { <text>class="active"</text> }>
         <a class="govuk-link govuk-link--no-visited-state govuk-link--no-underline" asp-page="/performance-data/Connect">Connect families to support</a>
     </li>
-    <li class="active">
+    <li @if (Model.ActivePage == ReportingNavigationDataModel.Page.Find) { <text>class="active"</text> }>
         <a class="govuk-link govuk-link--no-visited-state govuk-link--no-underline" asp-page="/performance-data/Find">Find support for your family</a>
     </li>
     @if (Model.IsDfeAdmin)
     {
-        <li>
+        <li @if (Model.ActivePage == ReportingNavigationDataModel.Page.Manage) { <text>class="active"</text> }>
             <a class="govuk-link govuk-link--no-visited-state govuk-link--no-underline" asp-page="/performance-data/Admin">Manage family support services and accounts</a>
         </li>
     }
