show 'None provided' if the location description is blank

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -170,7 +170,7 @@
                         @(location.IsFamilyHub ? "Yes" : "No")
                     </summary-row>
 
-                    <summary-row key="Location details" show-empty class="fh-pre-wrap">@location.Description</summary-row>
+                    <summary-row key="Location details" show-empty class="fh-pre-wrap">@NoneProvidedIfEmpty(location.Description)</summary-row>
                     
                     <summary-row key="Days service is available" show-empty
                                  action1="Change" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Times_At_Location, ServiceJourneyChangeFlow.SinglePage))&locationId=@location.Id&redo=@redo">
@@ -178,7 +178,7 @@
                     </summary-row>
                     @*todo: same data, different key to location-for-service page*@
                     <summary-row key="Extra availability details" show-empty class="fh-pre-wrap"
-                                 action1="Change" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Time_Details_At_Location, ServiceJourneyChangeFlow.SinglePage))&locationId=@location.Id&redo=@redo">@(string.IsNullOrEmpty(location.TimeDescription) ? "None provided" : location.TimeDescription)</summary-row>
+                                 action1="Change" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Time_Details_At_Location, ServiceJourneyChangeFlow.SinglePage))&locationId=@location.Id&redo=@redo">@NoneProvidedIfEmpty(location.TimeDescription)</summary-row>
 
                 </summary-list>
             }
@@ -203,7 +203,7 @@
                 </summary-row>
 
                 <summary-row key="Extra availability details" show-empty class="fh-pre-wrap"
-                             action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Time_Details, ServiceJourneyChangeFlow.SinglePage)">@(string.IsNullOrEmpty(service.TimeDescription)?"None provided":service.TimeDescription)</summary-row>
+                             action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Time_Details, ServiceJourneyChangeFlow.SinglePage)">@NoneProvidedIfEmpty(service.TimeDescription)</summary-row>
             </summary-list>
         }
 
@@ -247,5 +247,10 @@
     private static string AgeToString(int age)
     {
         return age == 127 ? "25+" : age.ToString();
+    }
+
+    private static string NoneProvidedIfEmpty(string? value)
+    {
+        return string.IsNullOrEmpty(value) ? "None provided" : value;
     }
 }
