--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/_ViewImports.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@namespace FamilyHubs.ServiceDirectory.Admin.Web.Pages
 @using FamilyHubs.ServiceDirectory.Admin.Core.Models
 @using System.Runtime.CompilerServices
+@using FamilyHubs.ServiceDirectory.Shared.Display
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, FamilyHubs.SharedKernel.Razor
