--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Locations-For-Service.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Locations-For-Service.cshtml
@@ -1,5 +1,4 @@
 ﻿@page
-@using FamilyHubs.ServiceDirectory.Shared.Display
 @* @using FamilyHubs.SharedKernel.Razor.FamilyHubsUi.Extensions *@
 @using FamilyHubs.SharedKernel.Razor.Summary
 @using Microsoft.AspNetCore.Mvc.TagHelpers
@@ -88,7 +87,7 @@
                             @location.Times.GetDayNames()
                         </summary-row>
                         <summary-row key="Extra availability details" show-empty class="fh-pre-wrap"
-                                     action1="Change" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Time_Details_At_Location))&locationId=@location.Id&redo=@redo">@(string.IsNullOrEmpty(location.TimeDescription) ? "None provided" : location.TimeDescription)</summary-row>
+                                     action1="Change" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Time_Details_At_Location))&locationId=@location.Id&redo=@redo">@(location.TimeDescription.GetDisplay())</summary-row>
                     </summary-card>
             }
         }
