--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/local-authority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/local-authority.cshtml
@@ -1,45 +1,11 @@
 ﻿@page
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.local_authorityModel
 @{
-    ViewData["Title"] = "Search and select the local authority area this service is in";
+    ViewData["Title"] = Model.Label;
 }
 
 @section Back {
     <a href="@Model.BackUrl" class="govuk-back-link">Back</a>
 }
 
-@* todo: have a component for this?*@
-
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                <h1 class="govuk-fieldset__heading">
-                    Search and select the local authority area this service is in
-                </h1>
-            </legend>
-            <form method="post" novalidate>
-        
-                @*todo: dynamically load data from db*@
-                @*todo: accessibility: label (visually hidden perhaps), aria, etc*@
-
-                <div class="govuk-form-group">
-                    <label class="govuk-label" for="localAuthority">
-                        <!---Select local authority--->
-                    </label>
-                    <select class="govuk-select" id="local-authority" name="la">
-                        <option value="@local_authorityModel.NoSelectionId" selected disabled></option>
-                        @foreach (var organisation in Model.Organisations)
-                        {
-                            <option value="@organisation.Id">@organisation.Name</option>
-                        }
-                    </select>
-                </div>
-        
-                <button type="submit" class="govuk-button" data-module="govuk-button">
-                    Continue
-                </button>
-            </form>
-        </fieldset>
-    </div>
-</div>
+<partial name="_SingleAutocompletePage" model="Model" />
