--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_PerformanceDataCard.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_PerformanceDataCard.cshtml
@@ -1,6 +1,6 @@
 ﻿@model bool
 
-<div class="card">
+<div data-testid="card-performance" class="card">
     <h3 class="govuk-heading-s">
         <a asp-page="/Performance-Data/Find">View Data</a>
     </h3>
